pod-nginx.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: my-nginx
  name: nginx
  namespace: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
