metrics-server.yml
---
# Source: metrics-server/templates/metric-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  labels:
    app: metrics-server
    chart: metrics-server-2.10.0
    release: metrics-server
    heritage: Helm
  annotations:
    {}
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: metrics-server
    release: metrics-server
  type: ClusterIP
---
# Source: metrics-server/templates/metrics-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-server
  labels:
    app: metrics-server
    chart: metrics-server-2.10.0
    release: metrics-server
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: metrics-server
      release: metrics-server
  replicas: 1
  template:
    metadata:
      labels:
        app: metrics-server
        release: metrics-server
    spec:
      serviceAccountName: metrics-server
      containers:
        - name: metrics-server
          image: "gcr.io/google_containers/metrics-server-amd64:v0.3.6"
          imagePullPolicy: IfNotPresent
          command:
            - /metrics-server
            - --cert-dir=/tmp
            - --logtostderr
            - --secure-port=8443
            - --kubelet-insecure-tls
            - --kubelet-preferred-address-types=InternalIP
          ports:
          - containerPort: 8443
            name: https
          livenessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /healthz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - all
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
          volumeMounts:
          - name: tmp
            mountPath: /tmp
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
      volumes:
      - name: tmp
        emptyDir: {}
---
# Source: metrics-server/templates/tests/test-version.yaml
apiVersion: v1
kind: Pod
metadata:
  name: metrics-server-test
  labels:
    app: metrics-server
    chart: metrics-server-2.10.0
    release: metrics-server
    heritage: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
  - name: wget
    image: busybox
    command: ['/bin/sh']
    args:
    - -c
    - 'wget -qO- https://metrics-server:443/version | grep -F v0.3.6'
  restartPolicy: Never
