networkPolicy-default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: nginx
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
